--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     <header>
         <h1 class="page-title">Taskinator</h1>
-        <p>Click the button below to add a new tast!</p>
-        <button class="btn">Add Task</button>
+        <p>Click the button below to add a new task!</p>
+        <button class="btn" id="save-task">Add Task</button>
     </header>
 
     <main class="page-content">
@@ -30,6 +30,6 @@
         &copy;2020 by Taskinator
     </footer>
 
-    <script type="text/javascript" href="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
